// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonGroup is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--s testClass1 testClass2"
  />
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize compressed is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--compressed"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize m is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--m"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize s is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color danger is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--danger euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--danger euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--danger euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color ghost is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--ghost euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--ghost euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--ghost euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color primary is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--primary euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--primary euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--primary euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color secondary is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--secondary euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--secondary euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--secondary euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color text is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color warning is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--warning euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--warning euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--warning euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props idSelected is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButton--fill euiButtonGroup__button euiButtonGroup__button--selected"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        checked=""
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isDisabled is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonToggle--isDisabled euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        disabled=""
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonToggle--isDisabled euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        disabled=""
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonToggle--isDisabled euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        disabled=""
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isFullWidth is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset euiButtonGroup__fieldset--fullWidth"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s euiButtonGroup--fullWidth"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isIconOnly is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonToggle--isIconOnly euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Option one
        </span>
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonToggle--isIconOnly euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Option two
        </span>
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonToggle--isIconOnly euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Option three
        </span>
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props legend is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props name is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        name="name"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        name="name"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        name="name"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props options are rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        id="button00"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button01"
      >
        Option two
      </label>
      <input
        class="euiToggle__input"
        id="button01"
        type="radio"
      />
    </div>
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
    >
      <label
        for="button02"
      >
        Option three
      </label>
      <input
        class="euiToggle__input"
        id="button02"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props options can pass down data-test-subj 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <div
      class="euiButtonToggle euiToggle euiButtonGroup__toggle euiButtonToggle__wrapper euiButton--text euiButtonGroup__button"
      data-test-subj="test"
    >
      <label
        for="button00"
      >
        Option one
      </label>
      <input
        class="euiToggle__input"
        data-test-subj="test"
        id="button00"
        type="radio"
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props type of multi idToSelectedMap is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <button
      aria-selected="true"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button euiButtonGroup__button--selected euiButton--fill"
      id="button00"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-selected="true"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button euiButtonGroup__button--selected euiButton--fill"
      id="button01"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-selected="false"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button"
      id="button02"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props type of multi is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--s"
  >
    <button
      aria-selected="false"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button"
      id="button00"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-selected="false"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button"
      id="button01"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-selected="false"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button"
      id="button02"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;
